fix(website): prevent x overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -328,6 +328,9 @@ video {
 .gap-5 {
   gap: 1.25rem;
 }
+.overflow-x-auto {
+  overflow-x: auto;
+}
 .overflow-x-hidden {
   overflow-x: hidden;
 }
